get developers by category

--- a/DevContactDirectory/Web.config
+++ b/DevContactDirectory/Web.config
@@ -73,6 +73,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="ApplicationDbContext" connectionString="Data Source=.;Initial Catalog=Developer;user id=sa;password = yourpassword" providerName="System.Data.SqlClient" />
+    <add name="ApplicationDbContext" connectionString="Data Source=.;Initial Catalog=Developer;user id=sa;password = Ep@yplusng.com" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
